RESOLVED FIXED129690
[iOS WebKit2]: Next/Prev button in the accessory bar do not work
https://bugs.webkit.org/show_bug.cgi?id=129690
Summary [iOS WebKit2]: Next/Prev button in the accessory bar do not work
Enrica Casucci
Reported 2014-03-04 11:30:10 PST
This bug track the work required to implement this functionality on iOS. <rdar://problem/16073569>
Attachments
Patch (6.85 KB, patch)
2014-03-04 11:34 PST, Enrica Casucci
simon.fraser: review+
Enrica Casucci
Comment 1 2014-03-04 11:34:08 PST
Simon Fraser (smfr)
Comment 2 2014-03-04 11:42:50 PST
Comment on attachment 225796 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=225796&action=review > Source/WebKit2/UIProcess/WebPageProxy.h:483 > + void nextAssistedNode(bool isForward); It's not clear if this is a getter or a command. I think it should be focusNextAssistedNode, or moveToNextAssistedNode. It would also be nice if the param were an enum. > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:1594 > +static inline bool hasFocusableNode(Node* startNode, Page* page, bool isForward) > +{ > + return nextFocusableNode(startNode, page, isForward) != nil; > +} > + > +void WebPage::nextAssistedNode(bool isForward) > +{ > + Node* nextNode = nextFocusableNode(m_assistedNode.get(), m_page.get(), isForward); > + if (nextNode) > + toElement(nextNode)->focus(); > +} I think all these Node* should really be Element* (but should be fixed in a subsequent patch)
Enrica Casucci
Comment 3 2014-03-04 14:47:24 PST
Committed revision 165081.
Note You need to log in before you can comment on or make changes to this bug.